--- a/apps/desktop/src/app/upload/upload.component.html
+++ b/apps/desktop/src/app/upload/upload.component.html
@@ -1,27 +1,35 @@
-<ng-container *ngIf="step === 0">
-  <da-connectors type="sources"
-                 (onSelect)="selectSource($event)"></da-connectors>
-</ng-container>
-<ng-container *ngIf="step === 1">
-  <stf-button qa="next"
-              (click)="next()">{{ 'Next' | translate }}</stf-button>
-  <div class="search-form">
-    <stf-input [(value)]="query"></stf-input>
-    <stf-button (click)="triggerSearch.next()">{{ 'Search' | translate }}</stf-button>
+<div class="container">
+  <div class="steps">
+    <da-steps [currentStep]="step"></da-steps>
   </div>
-  <table>
-    <tr *ngFor="let resource of (resources | async)">
-      <td>
-        <stf-checkbox [selected]="selection.isSelected(resource)"
-                      (selectedChange)="selection.toggle(resource)"></stf-checkbox>
-      </td>
-      <td>{{ resource.title }}</td>
-      <td>{{ resource.type }}</td>
-    </tr>
-  </table>
-</ng-container>
-<ng-container *ngIf="step === 2">
-  <h2>Push to</h2>
-  <da-connectors type="destinations"
-                 (onSelect)="selectDestination($event)"></da-connectors>
-</ng-container>
+  <div class="content">
+    <ng-container *ngIf="step === 0">
+      <da-connectors type="sources"
+                     (onSelect)="selectSource($event)"></da-connectors>
+    </ng-container>
+    <ng-container *ngIf="step === 1">
+      <stf-button qa="next"
+                  (click)="next()">{{ 'Next' | translate }}</stf-button>
+      <div class="search-form">
+        <stf-input [(value)]="query"></stf-input>
+        <stf-button (click)="triggerSearch.next()">{{ 'Search' | translate }}</stf-button>
+      </div>
+      <table>
+        <tr *ngFor="let resource of (resources | async)">
+          <td>
+            <stf-checkbox [selected]="selection.isSelected(resource)"
+                          (selectedChange)="selection.toggle(resource)"></stf-checkbox>
+          </td>
+          <td>{{ resource.title }}</td>
+          <td>{{ resource.type }}</td>
+        </tr>
+      </table>
+    </ng-container>
+    <ng-container *ngIf="step === 2">
+      <h2>Push to</h2>
+      <da-connectors type="destinations"
+                     (onSelect)="selectDestination($event)"></da-connectors>
+    </ng-container>
+  </div>
+</div>
+
