--- a/apps/desktop/src/app/upload/confirm-files/confirm-files.component.html
+++ b/apps/desktop/src/app/upload/confirm-files/confirm-files.component.html
@@ -9,7 +9,8 @@
   </div>
   <div class="actions">
     <stf-button (click)="upload()"
-                minWidth="110px">{{ 'generic.upload' | translate }}</stf-button>
+                minWidth="110px"
+                qa="confirm">{{ 'generic.upload' | translate }}</stf-button>
     <stf-button (click)="close()"
                 minWidth="110px"
                 color="gray">{{ 'generic.cancel' | translate }}</stf-button>
