improve upload dialog [sc-1393]

--- a/apps/app/src/app/knowledge-box/knowledge-box/knowledge-box.component.html
+++ b/apps/app/src/app/knowledge-box/knowledge-box/knowledge-box.component.html
@@ -9,7 +9,7 @@ lockedOpen="gt-xs" [folded]="true" [foldedWidth]="60" [foldedAutoTriggerOnHover]
 
 
 <div class="upload-bar-container"
-     *ngIf="uploading | async">
+     *ngIf="showBar | async">
   <app-upload-bar></app-upload-bar>
 </div>
 
