--- a/apps/app/src/app/knowledge-box/upload-bar/upload-bar.component.scss
+++ b/apps/app/src/app/knowledge-box/upload-bar/upload-bar.component.scss
@@ -1,8 +1,9 @@
 @import 'libs/pastanaga/src/lib/styles/stf';
 
 .upload-bar {
+  position: relative;
   height: 45px;
-  padding: 0 100px 0 48px;
+  padding: 0 var(--app-layout-margin-right) 0 48px;
   background-color: rgba(0, 0, 0, 0.7);
   border-radius: 0px 0px 4px 0px;
   color: #fff;
@@ -20,7 +21,7 @@
     margin-right: 24px;
   }
 
-  button {
+  .check-files {
     @include reset-button();
     cursor: pointer;
     height: 30px;
@@ -30,5 +31,19 @@
     background: var(--stf-gray-background);
     border-radius: var(--stf-border-radius-button);
   }
-
+ 
+  .close {
+    @include reset-button();
+    cursor: pointer;
+    position: absolute;
+    right: 22px;
+    top: 50%;
+    transform: translateY(-50%);
+    svg {
+      display: block;
+      width: 20px;
+      height: auto;
+      fill: #fff;
+    }
+  }
 }
